feat(tools): add logger func
